# leetcode-solutions

./: .gitignore  README.md  check  count_elements_with_max_frequency_3005.rs  main.rs  new_problem  package.json  tosolve.md  update_readme.py
Ruby/: 69.sqrt-x.rb  (+12 more)
rust/: Cargo.toml  lib.rs  special_array_with_x_elements_greater_than_or_equal_x_1608.rs
rust/src/: .open_the_lock_752.rs.rustfmt  1137_nth_tribonacci_number.rs  1519_Number-of-Nodes-in-the-Subtree-With-the-Same-Label.rs  2236_root-equals-sum-of-children.rs  57_insert_interval.rs  926_flip_string_to_monotone_increasing.rs  974_subarray_sums_divisible_by_k.rs  XOR_operation_in_an_array_1486.rs  ]  _count_symmetric_integers_2843.rs  add_binary_67.rs  add_one_row_to_tree_623.rs  add_two_numbers_2.rs  ant_on_the_boundary_3028.rs  average_waiting_time_1701.rs  boats_to_save_people_881.rs  build_array_from_permutation_1920.rs  check_if_a_parenthesis_string_can_be_valid_2116.rs  check_if_a_word_occurs_as_a_prefix_of_any_word_in_a_sentence_1455.rs  check_if_n_and_its_double_exist_1346.rs  check_if_sentene_is_pangram_1832.rs  check_if_string_is_a_prefix_of_array_1961.rs  compare_version_numbers_165.rs  contains_duplicate_217.rs  count_elements_with_max_frequency_3005.rs  count_good_triplets_1534.rs  count_number_of_bad_pairs_2364.rs  count_prefixes_of_a_given_string_2255.rs  count_special_quadruplets_1995.rs  count_the_digits_that_divide_a_number_2520.rs  count_total_number_of_colored_cells_2579.rs  counting_words_with_a_given_prefix_2185.rs  course_schedule_207.rs  course_schedule_ii_210.rs  custom_sort_string_791.rs  (+133 more)
(+301 files in other folders)
