[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "12"
path = "src/12_integer-to-roman.rs"

[[bin]]
name = "1519"
path = "src/1519_Number-of-Nodes-in-the-Subtree-With-the-Same-Label.rs"
[[bin]]
name = "724"
path = "src/724_find-pivot-index.rs"
[[bin]]
name = "2246"
path = "src/2246_longest-path-with-different-adjacent-characters.rs"
[[bin]]
name = "57"
path = "src/57_insert_interval.rs"
[[bin]]
name = "926"
path = "src/926_flip_string_to_monotone_increasing.rs"
[[bin]]
name = "974"
path = "src/974_subarray_sums_divisible_by_k.rs"
[[bin]]
name = "1137"
path = "1137_nth_tribonacci_number.rs"
[[bin]]
name = "2870"
path = "2870_minimum_number_of_operations-to-make-array-empty.rs"
[dependencies]
rand = "0.8.5"

