[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "12"
path = "src/12_integer-to-roman.rs"

[[bin]]
name = "1519"
path = "src/1519_Number-of-Nodes-in-the-Subtree-With-the-Same-Label.rs"
[[bin]]
name = "724"
path = "src/724_find-pivot-index.rs"
[dependencies]
